# app/Models/Company.php
@@ -7,20 +7,33 @@ use Illuminate\Database\Eloquent\Model;
 
 class Company extends Model
 {
-    
     use HasFactory;
-    //
-    protected $fillable=[
+
+    protected $fillable = [
         "user_id",
-        "niu",
+        "numero_employeur", // Remplacement de "niu"
         "raison_sociale",
         "telephone",
         "address",
+        "is_verified",      // Ajout du nouveau champ
     ];
-    public function user(){
-        return $this->belongsTo(User::class,"user_id");
+
+    /**
+     * The attributes that should be cast.
+     *
+     * @var array<string, string>
+     */
+    protected $casts = [
+        'is_verified' => 'boolean', // S'assure que la valeur est toujours castée en booléen (true/false)
+    ];
+
+    public function user()
+    {
+        return $this->belongsTo(User::class, "user_id");
     }
-    public function declarations(){
+
+    public function declarations()
+    {
         return $this->hasMany(Declaration::class);
     }
 }
